[package]
name = "playlist_to_txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = {version = "0.11.6", default-features = false, features = ["cli", "client-reqwest", "reqwest-default-tls"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1"}
url = {version = "2"}
chrono = {version = "0.4"}
clearscreen = {version = "2"}